@@ -28,6 +28,76 @@ def test__get_set_tag_density():
     assert ht._get_tag_density() == 2
 
 
+def test_update_from():
+    ht = khmer.Hashbits(5, 1000, 4)
+    ht2 = khmer.Hashbits(5, 1000, 4)
+
+    assert ht.get('AAAAA') == 0
+    assert ht.get('GCGCG') == 0
+    assert ht2.get('AAAAA') == 0
+    assert ht2.get('GCGCG') == 0
+
+    ht2.count('AAAAA')
+
+    assert ht.get('AAAAA') == 0
+    assert ht.get('GCGCG') == 0
+    assert ht2.get('AAAAA') == 1
+    assert ht2.get('GCGCG') == 0
+
+    ht.count('GCGCG')
+
+    assert ht.get('AAAAA') == 0
+    assert ht.get('GCGCG') == 1
+    assert ht2.get('AAAAA') == 1
+    assert ht2.get('GCGCG') == 0
+
+    ht.update(ht2)
+
+    assert ht.get('AAAAA') == 1
+    assert ht.get('GCGCG') == 1
+    assert ht2.get('AAAAA') == 1
+    assert ht2.get('GCGCG') == 0
+
+
+def test_update_from_diff_ksize_2():
+    ht = khmer.Hashbits(5, 1000, 4)
+    ht2 = khmer.Hashbits(4, 1000, 4)
+
+    try:
+        ht.update(ht2)
+        assert 0, "should not be reached"
+    except ValueError as err:
+        print str(err)
+
+    try:
+        ht2.update(ht)
+        assert 0, "should not be reached"
+    except ValueError as err:
+        print str(err)
+
+
+def test_update_from_diff_tablesize():
+    ht = khmer.Hashbits(5, 100, 4)
+    ht2 = khmer.Hashbits(4, 1000, 4)
+
+    try:
+        ht.update(ht2)
+        assert 0, "should not be reached"
+    except ValueError as err:
+        print str(err)
+
+
+def test_update_from_diff_num_tables():
+    ht = khmer.Hashbits(5, 1000, 3)
+    ht2 = khmer.Hashbits(4, 1000, 4)
+
+    try:
+        ht.update(ht2)
+        assert 0, "should not be reached"
+    except ValueError as err:
+        print str(err)
+
+
 def test_n_occupied_1():
     filename = utils.get_test_data('random-20-a.fa')
 
