@@ -1,3 +1,9 @@
+2015-05-31  Titus Brown  <titus@idyll.org>
+
+   * khmer/_khmermodule.cc,lib/hashbits.{cc,hh}: add Hashbits::update_from()
+   and Hashbits.update().
+   * tests/test_hashbits.py: associated tests.
+
 2015-05-26  Titus Brown  <titus@idyll.org>
 
    * khmer/_khmermodule.cc: refactor CPython layer so that KHashtable
